[package]
name = "wowint"
version = "2025.1.110001"
edition = "2021"
authors =["Eloi Stree"]


license-file = "LICENSE"

readme = "README.md"
repository = "https://github.com/EloiStree/crates_wowint"
documentation = "https://github.com/EloiStree/2024_08_29_ScratchToWarcraft"
homepage = "https://github.com/EloiStree/2024_08_29_ScratchToWarcraft"
description = """
Allows to push integer to udp target in aim to remote control a game from key injection.
"""
keywords = ["udp", "integer", "game", "keyboard"]

[dependencies]
rand = "0.8.4"

[profile.dev]
opt-level=0

[profile.release]
opt-level=3